--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="text"],input[type="password"], input[type="email"]{
+input[type="text"],input[type="password"], input[type="email"], textarea{
     @apply w-full border my-1 py-2 px-3 rounded-2xl;
 }
 
@@ -18,4 +18,9 @@ button.primary{
 button.secondary{
     background-color: rgb(70, 70, 218);
     @apply w-full rounded-2xl p-2 text-white;
+}
+
+label{
+    display: flex;
+    padding: 1rem;
 }
